--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_timeline">Home Timeline</string>
+    <string name="title_activity_compose">ComposeActivity</string>
+    <string name="compose_hint">What\'s hapenning</string>
+    <string name="send">Tweet</string>
 </resources>
