--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,9 @@
     <string name="title_activity_followers">FollowersActivity</string>
     <string name="title_activity_search">SearchActivity</string>
     <string name="search">Search Twitter</string>
+    <string name="message">Messages</string>
+    <string name="title_activity_messages">MessagesActivity</string>
+    <string name="in_reply_to">In reply to</string>
+    <string name="message_cancel">Cancel</string>
+    <string name="message_send">Send</string>
 </resources>
