UI changes, profile page changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_timeline">Home Timeline</string>
     <string name="title_activity_compose">ComposeActivity</string>
-    <string name="compose_hint">What\'s hapenning</string>
+    <string name="compose_hint">What\'s happening</string>
     <string name="send">Tweet</string>
     <string name="title_activity_tweet_detail">TweetDetailActivity</string>
     <string name="Button_Reply">Reply</string>
